# continual-materials-adaptation

./: .gitignore  AGENTS.md  AUDIT_REPO_AND_DEPS.md  CLAUDE.md  FR-PhyTCA_Technical_Documentation.md  PROJECT_EXPLANATION_FOR_REVIEW.md  README.md  adapters.py  backbones.py  baselines.py  data.py  data_audit.py  diagnostics.py  fidelity_graph.py  models.py  pareto_harness.py  pcg_runner.py  periodic_graph.py  persistent_consolidation_graph.py  protocols.py  pyproject.toml  snapshot_diff.py  task.md  train_phytca.py  train_utils.py  versioned_graph.py  升级计划.md  反馈_1.md  反馈_2.md
configs/: jarvis_protocol_a.yaml  jarvis_protocol_b.yaml
legacy/: baselines.py  phytca.py
paper/: .gitignore  main.bib  main.tex
scripts/: analyze_snapshot_diff.py  generate_paper_data_analysis.py  run_pcg_addition.py  run_pcg_baselines.py  run_pcg_combined.py  run_pcg_fidelity_expansion.py  run_pcg_revision.py  run_phase0.py  run_phase0_b_screening.py  run_phase0_diagnostics.py  run_phase2_b_scaling.py  run_protocol_b_decisive.py  run_versioned_baselines.py  run_versioned_protocol.py
tests/: test_adapters_models.py  test_backbones.py  test_diagnostics.py  test_fidelity_graph.py  test_global_splits.py  test_metrics.py  test_pareto_harness.py  test_pcg_addition_runner.py  test_pcg_baselines.py  test_pcg_fidelity_runner.py  test_pcg_matgl.py  test_pcg_revision_runner.py  test_periodic_graph.py  test_persistent_consolidation_graph.py  test_protocol_semantics.py  test_protocols.py  test_snapshot_diff.py  test_versioned_baselines.py  test_versioned_graph.py  test_versioned_runner.py
